# bloom

./: .dockerignore  .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build_deploy.yml
alembic/: env.py
alembic/versions/: 0902da57a42d_changed_the_default_values_of_some_.py  12e8f89228a5_change_default_field.py  3d7cc643c9dd_testing_changes.py  5808f43c1708_db_init.py  6bf2d73c7f2c_added_db.py  83b1f4c7bbec_changed_the_default_values_of_some_.py  84350086e09e_removed_is_active_from_db_model.py  c2b5ba78e943_changed_the_default_values_of_some_.py  d07fb699344b_changed_the_default_values_of_some_.py
app/core/: config.py
bloom/: api.py  app.py  logging.py  main.py  postgres.py  security.py
bloom/api/router/auth/: auth_github.py  auth_router.py
bloom/api/router/status/: status_router.py
bloom/api/router/users/: user_data_router.py
bloom/auth/: endpoints.py  schemas.py
bloom/core/settings/: config.py  logger.py
bloom/db/queries/: user_model_queries.py
bloom/db/repositories/: database_setup.py
bloom/event/: endpoints.py  schemas.py  services.py
bloom/health/: endpoints.py
bloom/jwt/: auth_handler.py  schemas.py  token_handler.py
bloom/models/: event.py  user.py
bloom/models/domain/: users_model.py
bloom/models/schemas/: user_model_schema.py  user_response_schema.py
bloom/services/jwt/: jwt_auth_handler.py  jwt_token_handler.py
bloom/services/security/: hash_password.py
bloom/user/: endpoints.py  schemas.py
docs/architecture/system_design/: hld.md
migrations/: env.py
migrations/versions/: 25e91aaa013b_.py  298695ad2df9_.py  2abd92675486_added_new_field_slug.py  8c73aac9fc55_.py  e30f8937054b_init.py  note.md
scripts/: update_req.sh
tests/: conftest.py  test_health.py
