[tool.poetry]
name = "bloom"
version = "0.1.0"
description = "Bloom - A project inspired by the natural process of flowers blooming and represents growth, development, and new opportunities."
authors = ["Kanishk Pachauri <itskanishkp.py@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
anyio = "3.7.0"
certifi = "2023.5.7"
click = "8.1.3"
dnspython = "2.3.0"
email-validator = "2.0.0.post2"
exceptiongroup = "1.1.1"
fastapi = "0.96.0"
h11 = "0.14.0"
httpcore = "0.17.2"
httptools = "0.5.0"
httpx = "0.24.1"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
orjson = "3.9.0"
pydantic = "1.10.8"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.6.3"
ujson = "5.7.0"
uvicorn = "0.22.0"
uvloop = "0.17.0"
watchfiles = "0.19.0"
websockets = "11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
